--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | News homepage</title>
 
@@ -15,46 +19,84 @@
   </style>
 </head>
 <body>
+  <main>
+  <header>
+  <img src="./assets/images/logo.svg" alt="Logo" />
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>New</li>
+        <li>Popular</li>
+        <li>Trending</li>
+        <li>Categories</li>
+      </ul>
+    </nav>
+  </header>
+  <article>
+    <section>
+      <picture>
+        <source media="(min-width: 410px)" srcset="./assets/images/image-web-3-desktop.jpg">
+        <img src="./assets/images/image-web-3-mobile.jpg">
+      </picture>
+      <div class="encabezado">
+        <h1>The Bright Future of Web 3.0?</h1>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+        <div class="encabezado-desc">
+          <p>
+            We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+            But is it really fulfilling its promise?
+          </p>
+          <div class="boton">
+            Read more
+          </div>
+        </div>
+      </div>
+    </section>
+    <aside>
+      <h1>New </h1>
 
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <h2>Hydrogen VS Electric Cars</h2>
+      <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      <hr />
+      <h2>The Downsides of AI Artistry</h2>
+      <p>What are the possible adverse effects of on-demand AI image generation?</p>
+      <hr />
+      <h2>Is VC Funding Drying Up?</h2>
+      <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+    </aside>
+  </article>
+  <footer>
+    <div class="more-options">
+      <div class="more">
+        <img src="./assets/images/image-retro-pcs.jpg" alt="retro PCs">
+        <div class="more-text">
+          <h1>01</h1>
+          <h2>Reviving Retro PCs</h2>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
+      </div>
+      <div class="more">
+        <img src="./assets/images/image-top-laptops.jpg" alt="top laptops">
+        <div class="more-text">
+          <h1>02</h1>
+          <h2>Top 10 Laptops of 2022</h2>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
+      </div>
+      <div class="more">
+        <img src="./assets/images/image-gaming-growth.jpg" alt="Gaming growth">
+        <div class="more-text">
+          <h1>03</h1>
+          <h2>The Growth of Gaming</h2>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
+      </div>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
+  </main>
 </body>
 </html>
